--- a/index.html
+++ b/index.html
@@ -1,140 +1,112 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Flex 卡片分享器 v2.0</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        background: #f6f6f6;
-        padding: 20px;
-        margin: 0;
-      }
-      .card {
-        max-width: 700px;
-        margin: 40px auto;
-        background: white;
-        border-radius: 16px;
-        box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
-        padding: 30px;
-      }
-      h1 {
-        font-size: 28px;
-        color: #333;
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      textarea, input {
-        width: 100%;
-        padding: 12px;
-        font-size: 15px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-        font-family: monospace;
-        background: #fcfcfc;
-        margin-top: 10px;
-      }
-      button {
-        margin-top: 20px;
-        background: linear-gradient(135deg, #513934, #d4c0ba);
-        color: white;
-        border: none;
-        padding: 14px 20px;
-        font-size: 16px;
-        font-weight: bold;
-        border-radius: 12px;
-        cursor: pointer;
-        width: 100%;
-        transition: background 0.3s ease;
-      }
-      button:hover {
-        background: linear-gradient(135deg, #6e4d3a, #e0d2ca);
-      }
-      .preview {
-        margin-top: 30px;
-        padding: 15px;
-        background: #f1f1f1;
-        border-radius: 12px;
-        white-space: pre-wrap;
-        word-break: break-word;
-        font-size: 14px;
-        line-height: 1.6;
-        color: #444;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="card">
-      <h1>✨ Flex 卡片分享器 v2.0</h1>
-      <input type="text" id="altTextInput" placeholder="請輸入卡片名稱（altText，可留空）" />
-      <textarea id="input" placeholder="請貼上完整的 Flex JSON，包括 emoji、linearGradient、按鈕、carousel 等格式..."></textarea>
-      <button onclick="renderPreview()">預覽 Flex JSON</button>
-      <button onclick="sendFlex()">📤 分享到 LINE</button>
-      <div class="preview" id="preview">← 在上方貼入 JSON 並點擊按鈕即可預覽與發送</div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <title>Flex 卡片分享器 v2.0</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #f6f6f6;
+      padding: 20px;
+      margin: 0;
+    }
+    .card {
+      max-width: 700px;
+      margin: 40px auto;
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
+      padding: 30px;
+    }
+    h1 {
+      font-size: 28px;
+      color: #333;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    textarea, input {
+      width: 100%;
+      padding: 12px;
+      font-size: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      margin-bottom: 12px;
+      font-family: monospace;
+    }
+    button {
+      margin-top: 10px;
+      background: linear-gradient(135deg, #513934, #d4c0ba);
+      color: white;
+      border: none;
+      padding: 14px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 12px;
+      cursor: pointer;
+      width: 100%;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: linear-gradient(135deg, #6e4d3a, #e0d2ca);
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>✨ Flex 卡片分享器 v2.0</h1>
+    <input type="text" id="altTextInput" placeholder="請輸入卡片 altText（可留空）">
+    <textarea id="jsonInput" rows="14" placeholder="請貼上完整的 Flex JSON，包括 emoji、linearGradient、按鈕、carousel 等格式..."></textarea>
+    <button onclick="sendFlex()">🚀 分享給好友 Flex JSON</button>
+  </div>
 
-    <script>
-      // 初始化 LIFF
-      liff.init({ liffId: "2007736327-ZO83VAmo" })
-        .then(() => {
-          if (!liff.isLoggedIn()) {
-            liff.login();
-          }
-        })
-        .catch((err) => {
-          alert("❌ LIFF 初始化失敗：" + err);
-        });
-
-      function renderPreview() {
-        const input = document.getElementById("input").value.trim();
-        const preview = document.getElementById("preview");
-
-        try {
-          const parsed = JSON.parse(input);
-          const pretty = JSON.stringify(parsed, null, 2);
-          preview.textContent = pretty;
-        } catch (e) {
-          preview.textContent = "❌ JSON 格式錯誤，請檢查是否為有效的 Flex JSON";
+  <script>
+    liff.init({ liffId: "2007736327-ZO83VAmo" })
+      .then(() => {
+        if (!liff.isLoggedIn()) {
+          liff.login();
         }
+      })
+      .catch((err) => {
+        alert("❌ LIFF 初始化失敗：" + err);
+      });
+
+    function sendFlex() {
+      const json = document.getElementById("jsonInput").value;
+      const altText = document.getElementById("altTextInput").value || "這是一則 Flex 卡片";
+
+      if (!json) {
+        alert("⚠️ 請貼上 Flex JSON");
+        return;
       }
 
-      function sendFlex() {
-        const json = document.getElementById("input").value;
-        const altText = document.getElementById("altTextInput").value || "這是一則 Flex 卡片";
+      try {
+        const parsed = JSON.parse(json);
+        const message = {
+          type: "flex",
+          altText: altText,
+          contents: parsed
+        };
 
-        if (!json.trim()) {
-          alert("⚠️ 請貼上 Flex JSON");
+        if (!liff.isApiAvailable("shareTargetPicker")) {
+          alert("⚠️ 裝置不支援分享功能，請改用手機");
           return;
         }
 
-        try {
-          const parsed = JSON.parse(json);
-          const message = {
-            type: "flex",
-            altText: altText,
-            contents: parsed
-          };
+        liff.shareTargetPicker([message]).then(() => {
+          alert("✅ 分享成功！");
+          document.getElementById("jsonInput").value = "";
+          document.getElementById("altTextInput").value = "";
+        }).catch((err) => {
+          alert("❌ 分享失敗：" + err);
+        });
 
-          if (!liff.isApiAvailable("shareTargetPicker")) {
-            alert("⚠️ 裝置不支援分享功能，請改用手機");
-            return;
-          }
-
-          liff.shareTargetPicker([message]).then(() => {
-            alert("✅ 分享成功！");
-            document.getElementById("input").value = "";
-            document.getElementById("altTextInput").value = "";
-            document.getElementById("preview").textContent = "← 在上方貼入 JSON 並點擊按鈕即可預覽與發送";
-          }).catch((err) => {
-            alert("❌ 分享失敗：" + err.message);
-          });
-        } catch (e) {
-          alert("❌ JSON 格式錯誤，請重新檢查\n\n" + e.message);
-        }
+      } catch (e) {
+        alert("❌ JSON 格式錯誤，請檢查\n\n" + e.message);
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
 </html>
