--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8" />
-  <title>Flex 卡片分享器 v2.0</title>
+  <title>Flex 卡片分享器 v2.2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <style>
@@ -13,7 +13,7 @@
       margin: 0;
     }
     .card {
-      max-width: 700px;
+      max-width: 800px;
       margin: 40px auto;
       background: white;
       border-radius: 16px;
@@ -37,6 +37,10 @@
       box-sizing: border-box;
       font-family: monospace;
     }
+    textarea {
+      height: 400px;
+      resize: vertical;
+    }
     button {
       background: linear-gradient(135deg, #513934, #d4c0ba);
       color: white;
@@ -56,54 +60,87 @@
 </head>
 <body>
   <div class="card">
-    <h1>✨ Flex 卡片分享器 v2.0</h1>
+    <h1>✨ Flex 卡片分享器 v2.2</h1>
     <input id="altTextInput" type="text" placeholder="請輸入卡片標題 altText（可留空）" />
-    <textarea id="jsonInput" placeholder="請貼上完整的 Flex JSON，包括 emoji、linearGradient、按鈕、carousel 等格式..."></textarea>
+    <textarea id="jsonInput" placeholder="請貼上完整 Flex JSON，包括 emoji、漸層、按鈕、carousel、多張 bubble..."></textarea>
     <button onclick="sendFlex()">📤 分享給 LINE 好友</button>
   </div>
 
   <script>
     liff.init({ liffId: "2007736327-ZO83VAmo" })
       .then(() => {
-        if (!liff.isLoggedIn()) {
-          liff.login();
-        }
+        if (!liff.isLoggedIn()) liff.login();
       })
-      .catch((err) => {
-        alert("❌ LIFF 初始化失敗：" + err);
-      });
+      .catch((err) => alert("❌ LIFF 初始化失敗：" + err));
+
+    function fixImageUrls(obj) {
+      if (typeof obj !== 'object' || obj === null) return;
+      for (let key in obj) {
+        if (key === 'url' && typeof obj[key] === 'string' && obj[key].includes('lh3.googleusercontent.com/d/')) {
+          if (!obj[key].includes('=')) obj[key] += '=w1080';
+        } else {
+          fixImageUrls(obj[key]);
+        }
+      }
+    }
+
+    function removeEmptyContents(obj) {
+      if (typeof obj !== 'object' || obj === null) return;
+      if (Array.isArray(obj)) {
+        for (let i = obj.length - 1; i >= 0; i--) {
+          if (
+            obj[i] &&
+            obj[i].contents &&
+            Array.isArray(obj[i].contents) &&
+            obj[i].contents.length === 0
+          ) {
+            obj.splice(i, 1);
+          } else {
+            removeEmptyContents(obj[i]);
+          }
+        }
+      } else {
+        for (let key in obj) {
+          removeEmptyContents(obj[key]);
+        }
+      }
+    }
 
     function sendFlex() {
-      const json = document.getElementById("jsonInput").value;
+      const raw = document.getElementById("jsonInput").value.trim();
       const altText = document.getElementById("altTextInput").value || "這是一則 Flex 卡片";
 
-      if (!json) {
-        alert("⚠️ 請貼上 Flex JSON");
-        return;
-      }
+      if (!raw) return alert("⚠️ 請貼上 Flex JSON");
 
       try {
-        const parsed = JSON.parse(json);
-        const message = {
-          type: "flex",
-          altText: altText,
-          contents: parsed
-        };
+        let parsed = JSON.parse(raw);
+        fixImageUrls(parsed);
+        removeEmptyContents(parsed);
 
-        if (!liff.isApiAvailable("shareTargetPicker")) {
-          alert("⚠️ 目前裝置不支援分享功能，請改用手機");
-          return;
+        let message;
+        if (parsed.type === "flex" && parsed.altText && parsed.contents) {
+          message = parsed; // 已是完整 Flex 結構
+        } else {
+          message = {
+            type: "flex",
+            altText: altText,
+            contents: parsed
+          };
         }
 
-        liff.shareTargetPicker([message]).then(() => {
-          alert("✅ 分享成功！");
-          document.getElementById("jsonInput").value = "";
-          document.getElementById("altTextInput").value = "";
-        }).catch((err) => {
-          alert("❌ 分享失敗：" + err);
-        });
+        if (!liff.isApiAvailable("shareTargetPicker")) {
+          return alert("⚠️ 此裝置不支援分享功能，請改用手機 LINE App 開啟");
+        }
+
+        liff.shareTargetPicker([message])
+          .then(() => {
+            alert("✅ 分享成功！");
+            document.getElementById("jsonInput").value = "";
+            document.getElementById("altTextInput").value = "";
+          })
+          .catch((err) => alert("❌ 分享失敗：" + err));
       } catch (e) {
-        alert("❌ JSON 格式錯誤，請重新檢查\n\n" + e.message);
+        alert("❌ JSON 格式錯誤，請檢查格式\n\n" + e.message);
       }
     }
   </script>
