--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8" />
-  <title>Flex 卡片分享器 v2.5</title>
+  <title>Flex 卡片分享器 v2.6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <style>
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>✨ Flex 卡片分享器 v2.5</h1>
+    <h1>✨ Flex 卡片分享器 v2.6</h1>
     <input id="altTextInput" type="text" placeholder="請輸入卡片標題 altText（可留空）" />
     <textarea id="jsonInput" placeholder="請貼上完整 Flex JSON，emoji、漸層、變色按鈕、多卡、carousel 通通支援"></textarea>
     <button onclick="sendFlex()">📤 分享給 LINE 好友</button>
@@ -73,28 +73,27 @@
       })
       .catch((err) => alert("❌ LIFF 初始化失敗：" + err));
 
-    function sanitize(obj) {
-      if (typeof obj !== 'object' || obj === null) return obj;
+    function cleanFlex(obj) {
+      if (typeof obj !== 'object' || obj === null) return null;
 
-      // 圖片網址補參數
-      if (obj.url && typeof obj.url === 'string') {
-        const url = obj.url;
-        if (url.includes('lh3.googleusercontent.com/d/') && !url.includes('=')) {
-          obj.url = url + '=w1080';
-        }
-      }
-
-      // 清除空 box.contents
-      if (obj.type === 'box' && Array.isArray(obj.contents) && obj.contents.length === 0) {
-        return null; // 上層會自動過濾
+      // 補圖片網址 ?w1080
+      if (obj.url && typeof obj.url === 'string' && obj.url.includes('lh3.googleusercontent.com/d/') && !obj.url.includes('=')) {
+        obj.url += '=w1080';
       }
 
       // 遞迴清理
-      for (const key in obj) {
-        if (Array.isArray(obj[key])) {
-          obj[key] = obj[key].map(sanitize).filter(e => e !== null);
-        } else if (typeof obj[key] === 'object') {
-          obj[key] = sanitize(obj[key]);
+      if (Array.isArray(obj)) {
+        return obj.map(cleanFlex).filter(e => e !== null);
+      }
+
+      if (typeof obj === 'object') {
+        for (let key in obj) {
+          obj[key] = cleanFlex(obj[key]);
+        }
+
+        // 移除空 box
+        if (obj.type === 'box' && (!obj.contents || (Array.isArray(obj.contents) && obj.contents.length === 0))) {
+          return null;
         }
       }
 
@@ -109,7 +108,7 @@
 
       try {
         let parsed = JSON.parse(raw);
-        parsed = sanitize(parsed);
+        parsed = cleanFlex(parsed);
 
         const message = (
           parsed.type === "flex" && parsed.altText && parsed.contents
